@@ -2250,3 +2250,4 @@
 ( cvs diff -u -r 1.105.2.78 -r 1.105.2.79 src/prefs_account.c;  cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/prefs_compose_writing.c;  cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/prefs_message.c;  cvs diff -u -r 1.1.2.28 -r 1.1.2.29 src/prefs_msg_colors.c;  cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/prefs_other.c;  cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/prefs_receive.c;  cvs diff -u -r 1.5.2.30 -r 1.5.2.31 src/prefs_spelling.c;  cvs diff -u -r 1.1.2.33 -r 1.1.2.34 src/prefs_summaries.c;  cvs diff -u -r 1.3.2.47 -r 1.3.2.48 src/prefs_themes.c;  cvs diff -u -r 1.5.2.48 -r 1.5.2.49 src/gtk/gtkutils.c;  cvs diff -u -r 1.4.2.29 -r 1.4.2.30 src/gtk/gtkutils.h;  cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/plugins/pgpcore/prefs_gpg.c;  cvs diff -u -r 1.23.2.33 -r 1.23.2.34 src/plugins/spamassassin/spamassassin_gtk.c;  ) > 2.7.0cvs21.patchset
 ( cvs diff -u -r 1.274.2.162 -r 1.274.2.163 src/mainwindow.c;  cvs diff -u -r 1.395.2.274 -r 1.395.2.275 src/summaryview.c;  cvs diff -u -r 1.68.2.31 -r 1.68.2.32 src/summaryview.h;  ) > 2.7.0cvs22.patchset
 ( cvs diff -u -r 1.395.2.275 -r 1.395.2.276 src/summaryview.c;  ) > 2.7.0cvs23.patchset
+( cvs diff -u -r 1.1.4.65 -r 1.1.4.66 src/etpan/imap-thread.c;  ) > 2.7.0cvs24.patchset
