@@ -1,3 +1,8 @@
+2007-01-14 [colin]	2.7.0cvs24
+
+	* src/etpan/imap-thread.c
+		Maybe fix new reconnection issues
+
 2007-01-13 [colin]	2.7.0cvs23
 
 	* src/summaryview.c
